Fixed issues and end swagger documentation.
